unifi/unifi-guest/unifi-landing-service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-landing
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  selector:
    app: unifi-landing
  ports:
  - protocol: TCP
    port: 80
    name: http
  type: ClusterIP
  clusterIP: None
