unifi/unifi-guest/ingress-unifi-guest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-guest
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: traefik
  rules:
  - host: unifi.guest.sholdee.net
    http:
      paths:
        - path: /landing
          pathType: Prefix
          backend:
            service:
              name: unifi-landing
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: unifi-guest
              port:
                number: 8843
  tls:
  - hosts:
    - unifi.guest.sholdee.net
    secretName: unifi-guest-tls-secret
